Second Commit i think

--- a/certificate_management_system_backend/certificate-management-system/.env
+++ b/certificate_management_system_backend/certificate-management-system/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/certificate_management_system
+MONGODB_URI=mongodb+srv://bagalomkar945:PrI3rukOh6qRz3oq@cluster0.fihlx.mongodb.net/certificate_management_system?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret_key
 PORT=3000
